[gd_scene load_steps=19 format=3 uid="uid://oxwtlwy2ipae"]

[ext_resource type="Script" path="res://resources/scenes/overview_map/overview_map.gd" id="1_185wk"]
[ext_resource type="Script" path="res://resources/scenes/overview_map/gui.gd" id="2_x6770"]
[ext_resource type="Texture2D" uid="uid://c52qw40mjx1j3" path="res://assets/icons8-coin-94.png" id="3_1siy2"]
[ext_resource type="Texture2D" uid="uid://cyr1nlxwqfcrj" path="res://assets/icons8-zeit-96.png" id="4_quk4n"]
[ext_resource type="TileSet" uid="uid://chbono26jnxpy" path="res://assets/tileset.tres" id="5_2mt5p"]
[ext_resource type="PackedScene" uid="uid://dxj10v032c1nf" path="res://resources/scenes/levels/1-2.tscn" id="9_1apii"]
[ext_resource type="PackedScene" uid="uid://b8acwlg6blv30" path="res://resources/scenes/levels/1-4.tscn" id="11_61h5p"]
[ext_resource type="PackedScene" uid="uid://cyxfwxccn36lm" path="res://resources/scenes/levels/1-5.tscn" id="12_q3tko"]
[ext_resource type="PackedScene" uid="uid://drptgw3excs3b" path="res://resources/components/path_follow/path_follow_2d.tscn" id="18_kqxpk"]
[ext_resource type="Script" path="res://resources/components/pads.gd" id="19_ppijh"]
[ext_resource type="PackedScene" uid="uid://cg2vt4yp4vfgq" path="res://resources/components/pad/pad.tscn" id="20_u7wi0"]
[ext_resource type="PackedScene" uid="uid://dic8aouidvafg" path="res://resources/scenes/levels/1-3.tscn" id="21_d8ku7"]
[ext_resource type="AudioStream" uid="uid://c1ypjhn4gxnma" path="res://assets/audio/Puzzle-Dreams-2.mp3" id="22_716te"]

[sub_resource type="Curve2D" id="Curve2D_2ktyj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 613, 422, 0, 0, 0, 0, 770, 493)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_n66ix"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 770, 493, -97.9989, 1.7818, 97.9989, -1.7818, 1131, 324, 0, 0, 0, 0, 1280, 365)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_cfshl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1280, 365, -101.022, -31.4289, 101.022, 31.4289, 1482, 347, 0, 0, 0, 0, 1785, 492)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_txaqq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1785, 492, 0, 0, 0, 0, 1409, 685)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_gvfxt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1409, 685, 0, 0, 0, 0, 1448, 724, 0, 0, 0, 0, 1501, 750, 0, 0, 0, 0, 1630, 866, 0, 0, 0, 0, 1791, 877)
}
point_count = 5

[node name="Map" type="Node2D"]
script = ExtResource("1_185wk")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 2
position = Vector2(1265, 593)
zoom = Vector2(0.786, 0.786)

[node name="Gui" type="Control" parent="." groups=["gui"]]
layout_mode = 3
anchors_preset = 0
offset_left = 595.0
offset_top = 686.0
offset_right = 1121.0
offset_bottom = 981.0
script = ExtResource("2_x6770")

[node name="coin_label" type="Label" parent="Gui"]
layout_mode = 0
offset_left = 178.0
offset_top = 88.0
offset_right = 244.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 30

[node name="timer_label" type="Label" parent="Gui"]
layout_mode = 0
offset_left = 179.0
offset_top = 155.0
offset_right = 245.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 30

[node name="coin_icon" type="Sprite2D" parent="Gui"]
position = Vector2(132, 115)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_1siy2")

[node name="timer_icon" type="Sprite2D" parent="Gui"]
position = Vector2(130, 177)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_quk4n")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("5_2mt5p")
format = 2
layer_0/name = "floor"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(393218, 65536, 11, 458754, 0, 11, 393219, 0, 11, 327683, 65536, 11, 262148, 0, 11, 262149, 0, 11, 327685, 0, 11, 393222, 0, 11, 458758, 131072, 11, 524294, 131072, 11, 589829, 65536, 11, 655365, 0, 11, 786438, 131072, 11, 851973, 65536, 11, 917510, 196608, 11, 851974, 65536, 11, 327684, 0, 11)
layer_1/name = "pads"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(458754, 1, 3, 327684, 1, 3, 458758, 1, 3, 655365, 1, 3, 720901, 2, 2, 851974, 1, 3)
layer_2/name = "wall"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(851974, 131106, 2, 917509, 131106, 2, 393218, 11, 1, 589829, 34, 2, 655365, 34, 2, 393219, 34, 2, 393220, 34, 2, 262148, 34, 2, 262149, 131106, 2, 327685, 131106, 2, 393222, 131106, 2, 524294, 196642, 3)
layer_3/name = "wall-1"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = true
layer_3/y_sort_origin = 0
layer_3/z_index = -1
layer_3/tile_data = PackedInt32Array(458757, 65538, 6, 393221, 131074, 6, 393220, 131074, 6, 458753, 65538, 6, 524290, 65538, 6, 524291, 2, 6, 458755, 2, 6, 655366, 2, 6, 589830, 2, 6, 524295, 2, 6, 720900, 65538, 6)

[node name="Paths" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="Paths"]
z_index = 1
curve = SubResource("Curve2D_2ktyj")

[node name="PathFollow2D" parent="Paths/Path2D" instance=ExtResource("18_kqxpk")]
position = Vector2(613, 422)

[node name="Path2D2" type="Path2D" parent="Paths"]
z_index = 1
curve = SubResource("Curve2D_n66ix")

[node name="Path2D3" type="Path2D" parent="Paths"]
z_index = 1
curve = SubResource("Curve2D_cfshl")

[node name="Path2D4" type="Path2D" parent="Paths"]
z_index = 1
curve = SubResource("Curve2D_txaqq")

[node name="Path2D5" type="Path2D" parent="Paths"]
z_index = 1
curve = SubResource("Curve2D_gvfxt")

[node name="Pads" type="Node2D" parent="."]
script = ExtResource("19_ppijh")

[node name="Pad" parent="Pads" instance=ExtResource("20_u7wi0")]
position = Vector2(770, 493)
input_mapping = {
"right": 0
}
paths = Array[NodePath]([NodePath("../../Paths/Path2D2")])
backward = Array[bool]([false])
level_coins = "1"

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Pads/Pad"]
position = Vector2(-770, -493)
polygon = PackedVector2Array(760, 494, 770, 501, 779, 493, 770, 486)

[node name="Pad2" parent="Pads" instance=ExtResource("20_u7wi0")]
input_mapping = {
"left": 0,
"right": 1
}
paths = Array[NodePath]([NodePath("../../Paths/Path2D2"), NodePath("../../Paths/Path2D3")])
backward = Array[bool]([true, false])
level = ExtResource("9_1apii")
level_name = "1-2"
level_coins = "2"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pads/Pad2"]
position = Vector2(511, -129)
polygon = PackedVector2Array(760, 494, 770, 501, 779, 493, 770, 486)

[node name="Pad3" parent="Pads" instance=ExtResource("20_u7wi0")]
position = Vector2(1785, 492)
input_mapping = {
"down": 1,
"left": 0
}
paths = Array[NodePath]([NodePath("../../Paths/Path2D3"), NodePath("../../Paths/Path2D4")])
backward = Array[bool]([true, false])
level = ExtResource("21_d8ku7")
level_name = "1-3"
level_coins = "3"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pads/Pad3"]
position = Vector2(-770, -493)
polygon = PackedVector2Array(760, 494, 770, 501, 779, 493, 770, 486)

[node name="Pad4" parent="Pads" instance=ExtResource("20_u7wi0")]
input_mapping = {
"down": 0,
"right": 1
}
paths = Array[NodePath]([NodePath("../../Paths/Path2D5"), NodePath("../../Paths/Path2D4")])
backward = Array[bool]([false, true])
level = ExtResource("11_61h5p")
level_name = "1-4"
level_coins = "4"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pads/Pad4"]
polygon = PackedVector2Array(1405, 686, 1410, 681, 1415, 686, 1410, 690)

[node name="Pad5" parent="Pads" instance=ExtResource("20_u7wi0")]
input_mapping = {
"left": 0
}
paths = Array[NodePath]([NodePath("../../Paths/Path2D5")])
backward = Array[bool]([true])
level = ExtResource("12_q3tko")
level_name = "1-5"
level_coins = "5"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pads/Pad5"]
polygon = PackedVector2Array(1791, 873, 1796, 877, 1791, 880, 1786, 877)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_716te")
volume_db = -4.0
autoplay = true
